--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div class="slides">
 <section data-markdown>
     <script type="text/template">
-## 2017 網際內容管理
+# 2017 網際內容管理
 ##40523139 劉育彤
 
 ### 
@@ -96,10 +96,67 @@ Created by me
 
 
 						
+<section data-markdown>
+    <script type="text/template">
+###上課筆記
+MBR = Master Boot Record 主開機紀錄
+
+SSD = Solid State Disk 固態硬碟
+
+SCSL = Small Computer System Interface 小型電腦介面
+
+redundant 多餘的
+
+Raid 磁碟陣列
+
+replication 自我複製
+
+get pip 套件管理 pyqt5
+
+pull request 軟性改版
+    </script>
+</section>
+<section data-markdown>
+    <script type="text/template">
+###上課筆記
+何謂機械設計
+
+何謂機械
+
+要能夠精巧配置的東西  除了流體、固體還有液體
+
+機：左邊為木頭 、右邊為幾，幾代表很多的元件
+
+械：戒的意思是控制在一個範圍內，器物本身有特定功能
+
+何謂設計
+
+設計是一種表達
+
+設：左邊是言--代表說話，請別人去做
+
+計：經過很多討論、很多考量
+    </script>
+</section>
+<section data-markdown>
+    <script type="text/template">
+###製作網路線
+
+網路線有兩種規格T568A與T568B
+
+T568A： 綠白    綠    橘白    藍    藍白    橘    棕白    棕
+
+T568B： 橘白    橘    綠    藍    藍白    綠    棕白    棕
+
+兩種同規格的頭在一條線就為網路線
+
+如果是不同規格的，那就是跳線 
+
+跳線可用來作為傳輸兩台電腦之間的橋梁
+    </script>
+</section>
 </div>
 
-<section>
-</section>
 </div>
 
 <script src="https://cad-lab.github.io/cadlab_data/reveal/lib/js/head.min.js"></script>
